--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,9 +20,15 @@ dependencies:
   flutter:
     sdk: flutter
 
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  progress_dialog: ^1.2.0
+  modal_progress_hud: ^0.1.3
+  font_awesome_flutter: ^8.2.0
+  fluttertoast: ^3.1.3
+  http: ^0.12.0 
 
 dev_dependencies:
   flutter_test:
@@ -34,6 +40,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+
+  assets:
+    - assets/image/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
